# flock-showcase

./: .env_minimal  .env_template  .gitignore  .sesskey  AGENTS.md  README.md  pyproject.toml  requirements.txt  review_God_is_an_Astronaut_Embers.html
00-patterns/: 02-multi_publish.py  03-multi-artifact-multi-publish.py  04-fan-out.py  05-multi-fan-out.py  README.md
01-basics/: 01_declarative_pizza.py  03_blog_review.py  04_mcp_tools.py  05_dashboard.py  05b_dashboard_edge_cases.py
01-cli/: 01_declarative_pizza.py  02_input_and_output.py  03_code_detective.py  04_input_and_output.py  05_mcp_and_tools.py  06_mcp_roots.py  07_web_detective.py  08_band_formation.py  09_debate_club.py  10_news_agency.py  11_tracing_detective.py  12_secret_agents.py  13_medical_diagnostics_joinspec.py  14_ecommerce_batch_processing.py  15_iot_sensor_batching.py  README.md
01-getting-started/: 01-hello-flock.py  01_declarative_pizza.py  02-inputs-and-outputs-new.py  02-inputs-and-outputs-pydantic.py  02-inputs-and-outputs.py  02_hello_flock.py  02_input_and_output.py  03-using-a-tool.py  03_code_detective.py  04-flock-architecture.py  04_mcp_tools.py  04_movie_generation.py  06_mcp_roots.py  (+12 more)
05-full-projects/project-textual-project-planner/: .gitignore  README.md  pyproject.toml
05-full-projects/project-textual-project-planner/src/flock_flightplan/: __init__.py  app.py  model.py  project_tree.py  utils.py
05-full-projects/project-textual-project-planner/src/flock_flightplan/agents/: flocky.py  planning.py
05-full-projects/project-textual-project-planner/src/flock_flightplan/cli/: utils.py
05-full-projects/project-textual-project-planner/src/flock_flightplan/collector/: __init__.py  analysis.py  config.py  discovery.py  metrics.py  reporting.py
(+216 files in other folders)
