[project]
name = "flock-showcase"
version = "0.5.0b10"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flock-core>=0.5.0b18",
    "pymupdf4llm>=0.0.24",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "markitdown[all]>=0.1.3",
    "azure-storage-blob>=12.25.1",
    "azure-ai-translation-document>=1.1.0",
]


